--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
         <h3>p: (03) 9458 2220</h3>
         <h3>e: info@pastrymaster.com.au</h3>
         <br>
+        <img src="./images/PM-05125.jpg" class="face" />
+        <h3>Victor</h3>
+        <h6>Owner/Director</h6>
+        <h6>e: victor@pastrymaster.com.au</h6>
+        <h6>m: 0403 525 118</h6>      
+        <br>
+        <img src="./images/PM-05099.jpg" class="face" />
+        <h3>Rachel</h3>
+        <h6>Sales & Marketing</h6>
+        <h6>e: rachel@pastrymaster.com.au</h6>
+        <h6>m: 0432 297 755</h6>
+        <br>
         <h4>We deliver in the Melbourne metro area</h4>
         <br>
     </main>
