--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
 
     <main>
-        <h1>Welcome to Pastry Master!</h1>
+        <h1>Pastry Master, supplier of Pastry to the Hospitality industry</h1>
         <br>
         <h3>Since 1997, Pastry Master has been perfecting a range of puff pastry, savoury & sweet crust pastry
             rolls for all budgets. We make the pastry so you can focus on creating your food masterpieces.</h3>
@@ -35,18 +35,18 @@
         <h4>Contact us</h4>
         <br>
         <h3>p: (03) 9458 2220</h3>
-        <h3>e: info@pastrymaster.com.au</h3>
+        <h3>e: <a href="#"> info@pastrymaster.com.au</a></h3>
         <br>
         <img src="./images/PM-05125.jpg" class="face" />
         <h3>Victor</h3>
         <h6>Owner/Director</h6>
-        <h6>e: victor@pastrymaster.com.au</h6>
+        <h6>e: <a href="#"> victor@pastrymaster.com.au</a></h6>
         <h6>m: 0403 525 118</h6>      
         <br>
         <img src="./images/PM-05099.jpg" class="face" />
         <h3>Rachel</h3>
         <h6>Sales & Marketing</h6>
-        <h6>e: rachel@pastrymaster.com.au</h6>
+        <h6>e: <a href="#"> rachel@pastrymaster.com.au</a></h6>
         <h6>m: 0432 297 755</h6>
         <br>
         <h4>We deliver in the Melbourne metro area</h4>
